  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out !                      !
  ------------------------------------------------------------------------


2006/01/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_Url_toString (was not writing an unchanged string)


2006/01/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- work on CryptToken-API: 
  - added virtual function GWEN_CryptManager_SetPinStatus()
    This function is now used by some crypttokens (mainly chipcards) and
    intercepted by AqBanking's CryptManager. This is another step in making
    working with crypttokens safer.
  - added modes (change the behaviour for crypt tokens, e.g. allow the user
    to enter the pin even though the error counter isn't zero
  - moved 
      GWEN_CRYPTTOKEN_FLAGS_FORCE_PIN_ENTRY
    to
      GWEN_CRYPTTOKEN_MODES_FORCE_PIN_ENTRY
- fixed a bug in nl_http.c (was trying to read from a connection which is
  not yet established)


2006-01-19   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfarapi.h: Add #define GWENHYWFARAPI_H to avoid
	errorneous circular inclusion from types.h; remove '#' lines with
	comments but no preprocessor directives, might choke some compiler
	some day.


===========================================================================
MARK: released gwenhywfar-1.99.4 (2006/01/17)
===========================================================================


2006/01/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- bump up GCC version needed for visibility (use version 4, don't know which
  version started to support it, but I'm sure 4.0 does)


2006/01/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------