@@ -3,6 +3,12 @@
   ! as soon as the next release of GnuCash is out !                      !
   ------------------------------------------------------------------------
 
+2006/01/30: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- OpenHBCI CryptToken now signals a bad pin to the CryptManager (UI, which
+  is implemented e.g. in AqBanking). Now when entering a bad pin in a
+  AqBanking environment leads to the expected behaviour.
+
 
 2006/01/25: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
